Added Mobile interface.

--- a/mobile.html
+++ b/mobile.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fallout Character Maker</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <title>Superhero Character Maker</title>
+    <link rel="stylesheet" type="text/css" href="styles/mobile_style.css">
     <!-- <script nomodule defer type="text/javascript" src="scripts/legacyScript.js"></script> -->
     <script type="module" src="scripts/script.js" defer></script>
 </head>
