added mobile interface

--- a/mobile.html
+++ b/mobile.html
@@ -212,9 +212,10 @@
             <div id="power_points_value">10</div>
             <div id="power_points_label">Points Available</div>
             <div id="point_to_limit_box">
-                <div class="slot-button-subtract" data-talent="T.8"></div>
+                <div class="slot-button-subtract"></div>
+                <div id="space_between_buttons"></div>
                 <div id="convert_points_label">Convert Power Slot to Point</div>
-                <div class="slot-button-add" data-talent="T.8"></div>
+                <div class="slot-button-add"></div>
             </div>
             <div id="power_limit_value">4</div>
             <div id="power_limit_label">Powers Available</div>
